PCAI-28: исправления