@@ -1,136 +1,128 @@
 package ru.perevalov.gamerecommenderai.client;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
+import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
 import ru.perevalov.gamerecommenderai.dto.SteamOwnedGamesResponse;
 import ru.perevalov.gamerecommenderai.dto.SteamPlayerResponse;
 
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.Collections;
-import java.util.List;
 import java.util.function.Function;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 class SteamClientTest {
     private WebClient webClientMock;
     private WebClient.Builder webClientBuilderMock;
     private SteamClient steamClient;
 
+    @Value("${steam.getPlayerSummariesPath}")
+    private String getPlayerSummariesPath;
+    @Value("${steam.getOwnedGamesPath}")
+    private String getOwnedGamesPath;
+
+
     @BeforeEach
     void setUp() {
-        webClientMock = mock(WebClient.class, RETURNS_DEEP_STUBS);
+        webClientMock = Mockito.mock(WebClient.class, Mockito.RETURNS_DEEP_STUBS);
 
-        webClientBuilderMock = mock(WebClient.Builder.class, RETURNS_DEEP_STUBS);
-        when(webClientBuilderMock.baseUrl(anyString())).thenReturn(webClientBuilderMock);
-        when(webClientBuilderMock.defaultHeader(anyString(), anyString())).thenReturn(webClientBuilderMock);
-        when(webClientBuilderMock.build()).thenReturn(webClientMock);
+        webClientBuilderMock = Mockito.mock(WebClient.Builder.class, Mockito.RETURNS_DEEP_STUBS);
+        Mockito.when(webClientBuilderMock.baseUrl(ArgumentMatchers.anyString())).thenReturn(webClientBuilderMock);
+        Mockito.when(webClientBuilderMock.build()).thenReturn(webClientMock);
 
-        steamClient = new SteamClient(webClientBuilderMock, "https://dummy.url", "dummyKey");
+        steamClient = new SteamClient(
+                webClientBuilderMock,
+                "https://dummy.url",
+                "dummyKey",
+                getPlayerSummariesPath,
+                getOwnedGamesPath
+        );
     }
 
     @Test
     void testFetchPlayerSummaries_mapping() throws Exception {
 
-        String json = """
-                {
-                  "response": {
-                    "players": [
-                      {
-                        "steamid": "76561198000000000",
-                        "personaname": "TestUser",
-                        "avatarfull": "http://example.com/avatar.jpg"
-                      }
-                    ]
-                  }
-                }
-                """;
+        String json = Files.readString(
+                Paths.get(getClass().getClassLoader().getResource("steam/player_summaries.json").toURI())
+        );
 
         SteamPlayerResponse mappedResponse = new ObjectMapper()
                 .readValue(json, SteamPlayerResponse.class);
 
-        when(webClientMock.get()
-                .uri(any(Function.class))
-                .retrieve()
-                .bodyToMono(SteamPlayerResponse.class))
+        Mockito.when(webClientMock.get()
+                        .uri(ArgumentMatchers.any(Function.class))
+                        .retrieve()
+                        .bodyToMono(SteamPlayerResponse.class))
                 .thenReturn(Mono.just(mappedResponse));
 
-        SteamPlayerResponse response = steamClient.fetchPlayerSummaries(List.of("76561198000000000"));
+        SteamPlayerResponse response = steamClient.fetchPlayerSummaries("76561198000000000");
 
-        assertNotNull(response.getResponse());
-        assertEquals(1, response.getResponse().getPlayers().size());
+        Assertions.assertNotNull(response.getResponse(), "Response should not be null");
+        Assertions.assertEquals(1, response.getResponse().getPlayers().size(), "Response should have one player");
         var player = response.getResponse().getPlayers().getFirst();
-        assertEquals("76561198000000000", player.getSteamId());
-        assertEquals("TestUser", player.getPersonaName());
-        assertEquals("http://example.com/avatar.jpg", player.getAvatarFull());
+        Assertions.assertEquals("76561198000000000", player.getSteamId(), "Steam id should match");
+        Assertions.assertEquals("TestUser", player.getPersonaName(), "Persona name should match");
+        Assertions.assertEquals("http://example.com/avatar.jpg", player.getAvatarFull(), "Avatar full should match");
     }
 
     @Test
     void testFetchOwnedGames_mapping() throws Exception {
 
-        String json = """
-                {
-                  "response": {
-                    "game_count": 2,
-                    "games": [
-                      {"appid": 440, "name": "Team Fortress 2", "playtime_forever": 1234},
-                      {"appid": 570, "name": "Dota 2", "playtime_forever": 5678}
-                    ]
-                  }
-                }
-                """;
+        String json = Files.readString(
+                Paths.get(getClass().getClassLoader().getResource("steam/fetch_owned_games.json").toURI())
+        );
 
         SteamOwnedGamesResponse mappedResponse = new ObjectMapper()
                 .readValue(json, SteamOwnedGamesResponse.class);
 
-        when(webClientMock.get()
-                .uri(any(Function.class))
-                .retrieve()
-                .bodyToMono(SteamOwnedGamesResponse.class))
+        Mockito.when(webClientMock.get()
+                        .uri(ArgumentMatchers.any(Function.class))
+                        .retrieve()
+                        .bodyToMono(SteamOwnedGamesResponse.class))
                 .thenReturn(Mono.just(mappedResponse));
 
         SteamOwnedGamesResponse response = steamClient.fetchOwnedGames("76561198000000000", true, true);
 
-        assertNotNull(response.getResponse());
-        assertEquals(2, response.getResponse().getGameCount());
-        assertEquals(2, response.getResponse().getGames().size());
+        Assertions.assertNotNull(response.getResponse(), "Response should not be null");
+        Assertions.assertEquals(2, response.getResponse().getGameCount(), "Response should have two games");
+        Assertions.assertEquals(2, response.getResponse().getGames().size(), "Response should have two games");
 
-        var game1 = response.getResponse().getGames().getFirst();
-        assertEquals(440, game1.getAppId());
-        assertEquals("Team Fortress 2", game1.getName());
-        assertEquals(1234, game1.getPlaytimeForever());
+        var game1 = response.getResponse().getGames().get(0);
+        Assertions.assertEquals(440, game1.getAppId(), "App id should match");
+        Assertions.assertEquals("Team Fortress 2", game1.getName(), "Name should match");
+        Assertions.assertEquals(1234, game1.getPlaytimeForever(), "Playtime forever should match");
+        Assertions.assertEquals(50, game1.getPlaytime2weeks(), "Playtime 2weeks should match");
 
         var game2 = response.getResponse().getGames().get(1);
-        assertEquals(570, game2.getAppId());
-        assertEquals("Dota 2", game2.getName());
-        assertEquals(5678, game2.getPlaytimeForever());
+        Assertions.assertEquals(570, game2.getAppId(), "App id should match");
+        Assertions.assertEquals("Dota 2", game2.getName(), "Name should match");
+        Assertions.assertEquals(5678, game2.getPlaytimeForever(), "Playtime forever should match");
+        Assertions.assertEquals(100, game2.getPlaytime2weeks(), "Playtime 2weeks should match");
     }
 
     @Test
     void testFetchPlayerSummaries_PrivateProfile_returnsEmptyPlayers() {
 
         SteamPlayerResponse emptyProfile = new SteamPlayerResponse();
-        when(webClientMock.get()
-                .uri(any(Function.class))
-                .retrieve()
-                .bodyToMono(SteamPlayerResponse.class))
+
+        Mockito.when(webClientMock.get()
+                        .uri(ArgumentMatchers.any(Function.class))
+                        .retrieve()
+                        .bodyToMono(SteamPlayerResponse.class))
                 .thenReturn(Mono.just(emptyProfile));
 
-        SteamPlayerResponse response = steamClient.fetchPlayerSummaries(List.of("123456"));
+        SteamPlayerResponse response = steamClient.fetchPlayerSummaries("123456");
 
-        assertNotNull(response);
-        assertTrue(response.getResponse() == null
+        Assertions.assertNotNull(response, "Response should not be null");
+        Assertions.assertTrue(response.getResponse() == null
                 || response.getResponse().getPlayers() == null
-                || response.getResponse().getPlayers().isEmpty());
+                || response.getResponse().getPlayers().isEmpty(), "Response should have empty players for private profile");
     }
 
     @Test
@@ -142,17 +134,17 @@ class SteamClientTest {
         inner.setGames(Collections.emptyList());
         emptyGames.setResponse(inner);
 
-        when(webClientMock.get()
-                .uri(any(Function.class))
-                .retrieve()
-                .bodyToMono(SteamOwnedGamesResponse.class))
+        Mockito.when(webClientMock.get()
+                        .uri(ArgumentMatchers.any(Function.class))
+                        .retrieve()
+                        .bodyToMono(SteamOwnedGamesResponse.class))
                 .thenReturn(Mono.just(emptyGames));
 
         SteamOwnedGamesResponse response = steamClient.fetchOwnedGames("123456", true, true);
 
-        assertNotNull(response);
-        assertNotNull(response.getResponse());
-        assertEquals(0, response.getResponse().getGameCount());
-        assertTrue(response.getResponse().getGames().isEmpty());
+        Assertions.assertNotNull(response, "Response should not be null");
+        Assertions.assertNotNull(response.getResponse(), "Response should not be null");
+        Assertions.assertEquals(0, response.getResponse().getGameCount(), "Response should have zero games");
+        Assertions.assertTrue(response.getResponse().getGames().isEmpty(), "Response should have empty games");
     }
 }
